--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     .watch-head{display:flex;align-items:center;gap:12px;flex-wrap:wrap}
     .watch-badge{display:inline-block;background:#0b1626;border:1px solid var(--border);padding:8px;border-radius:12px}
     .watch-badge img{display:block;width:74px;height:34px;object-fit:contain}
-    .watch-panel{display:block;margin-top:12px;padding:28px;border-radius:12px;border:1px solid var(--border);background:#0b1626;text-align:center;text-decoration:none}
-    .watch-panel span{font-weight:800;color:#9bd1ff;font-size:22px;letter-spacing:.5px}
+    .watch-panel{display:block;margin-top:12px;padding:22px;border-radius:12px;border:1px solid var(--border);background:#0b1626;text-align:center;text-decoration:none}
+    .watch-panel span{font-weight:800;color:#9bd1ff;font-size:20px;letter-spacing:.2px}
     .watch-panel:hover span{color:#ffffff}
 
     .section-title{color:#FFD700;font-size:24px;text-align:center;margin:14px 0 10px}
@@ -162,19 +162,25 @@
     <h2 class="section-title">العوائد الشهرية</h2>
     <img class="divider-img" src="images/income_chart.jpg" alt="مخطط العوائد الشهرية" loading="lazy" decoding="async" width="900" height="420">
 
-    <!-- حساب المشاهدة (التعديل المطلوب) -->
+    <!-- حساب المشاهدة (زرّان كل واحد في سطر منفصل) -->
     <section class="card">
       <div class="watch-head">
         <div class="watch-badge" title="Myfxbook">
-          <!-- اللوجو الصغير -->
           <img src="images/MYFXBOOK.jpg" alt="Myfxbook">
         </div>
         <h2 style="margin:0;">للمُتابعة وتقييم الأداء</h2>
       </div>
 
-      <!-- المستطيل الكبير قابل للنقر وفي وسطه (اضغط هنا) -->
-      <a class="watch-panel" href="ضع_الرابط_هنا" target="_blank" rel="noopener">
-        <span>اضغط هنا</span>
+      <!-- زر نتائج النسخ -->
+      <a class="watch-panel" href="https://www.myfxbook.com/members/TREND07/trend-king/11665244"
+         target="_blank" rel="noopener">
+        <span>لمتابعة نتائج النسخ</span>
+      </a>
+
+      <!-- زر نتائج اللايف -->
+      <a class="watch-panel" href="https://www.myfxbook.com/settings?invitationsAccountOid=11678694#invitations"
+         target="_blank" rel="noopener">
+        <span>لمتابعة نتائج اللايف</span>
       </a>
     </section>
 
