--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </section>
 
-    <!-- الحاسبة (36.67% شهريًا / 21 يوم) -->
+    <!-- الحاسبة -->
     <section class="card calc-card">
       <h2 style="color:#FFD700; margin-bottom:12px;">📊 احسب عائدك اليومي والشهري (بالدولار)</h2>
       <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; align-items:center; margin-bottom:12px;">
@@ -162,7 +162,7 @@
     <h2 class="section-title">العوائد الشهرية</h2>
     <img class="divider-img" src="images/income_chart.jpg" alt="مخطط العوائد الشهرية" loading="lazy" decoding="async" width="900" height="420">
 
-    <!-- حساب المشاهدة (زرّان كل واحد في سطر منفصل) -->
+    <!-- حساب المشاهدة (زرّان جديدان) -->
     <section class="card">
       <div class="watch-head">
         <div class="watch-badge" title="Myfxbook">
@@ -171,127 +171,46 @@
         <h2 style="margin:0;">للمُتابعة وتقييم الأداء</h2>
       </div>
 
-      <!-- زر نتائج النسخ -->
+      <!-- زر نتائج الإكسبيرت والنسخ -->
       <a class="watch-panel" href="https://www.myfxbook.com/members/TREND07/trend-king/11665244"
          target="_blank" rel="noopener">
-        <span>لمتابعة نتائج النسخ</span>
+        <span>لمتابعة نتائج الإكسبيرت والنسخ</span>
       </a>
 
       <!-- زر نتائج اللايف -->
-      <a class="watch-panel" href="https://www.myfxbook.com/settings?invitationsAccountOid=11678694#invitations"
+      <a class="watch-panel" href="https://www.myfxbook.com/members/TREND07/trend-king-live/11678694"
          target="_blank" rel="noopener">
         <span>لمتابعة نتائج اللايف</span>
       </a>
     </section>
 
-    <!-- FAQ النهائي -->
+    <!-- FAQ -->
     <section class="card faq" aria-label="الأسئلة الشائعة">
       <h2>❓ الأسئلة الشائعة</h2>
-      <details>
-        <summary>هل الأرباح مضمونة؟</summary>
-        <p>التداول يحتوي على مخاطر، لكننا نعمل بنظام إدارة مخاطر منضبط لتقليل الخسائر وتعظيم الأرباح.</p>
-      </details>
-      <details>
-        <summary>ما الحد الأدنى للإيداع؟</summary>
-        <p>الحد الأدنى لبدء التداول الفعلي هو 500 دولار، بينما حساب 100 دولار مخصص للمشاهدة فقط.</p>
-      </details>
-      <details>
-        <summary>هل أستطيع السحب في أي وقت؟</summary>
-        <p>نعم، التحكم عندك في السحب والإيداع في أي وقت.</p>
-      </details>
-      <details>
-        <summary>ما نسبة العوائد المتوقعة شهريًا؟</summary>
-        <p>نعمل على تحقيق عوائد مستهدفة بين 30% و40% شهريًا مع مخاطر لا تتجاوز 10%.</p>
-      </details>
-      <details>
-        <summary>هل أحتاج للمتابعة اليومية؟</summary>
-        <p>لا تحتاج للمتابعة اليومية — عش حياتك وركّز في عملك، بينما ندير الحساب نيابة عنك.</p>
-      </details>
-      <details>
-        <summary>كيف أبدأ؟</summary>
-        <p>يمكنك التواصل.</p>
-      </details>
-      <details>
-        <summary>هل يمكنني تجربة الخدمة قبل الإيداع الكبير؟</summary>
-        <p>نعم، يمكنك متابعة أداء حساب المشاهدة للتعرف على النتائج قبل الاستثمار.</p>
-      </details>
-      <details>
-        <summary>هل هناك عمولات أو رسوم خفية؟</summary>
-        <p>لم يتم التحديد بعد (مجاني الفترة الحالية).</p>
-      </details>
-      <details>
-        <summary>كيف تتم إدارة المخاطر؟</summary>
-        <p>نستخدم نظامًا دقيقًا لتحديد حجم الصفقات وإيقاف الخسائر ومتابعة الاتجاهات مع التعديل المستمر.</p>
-      </details>
-      <details>
-        <summary>لماذا تكون معنا؟</summary>
-        <p>لا تحتاج للمتابعة اليومية المرهقة — عش حياتك وركّز في عملك، ودع الحساب يعمل.</p>
-      </details>
+      <details><summary>هل الأرباح مضمونة؟</summary><p>التداول يحتوي على مخاطر، لكننا نعمل بنظام إدارة مخاطر منضبط لتقليل الخسائر وتعظيم الأرباح.</p></details>
+      <details><summary>ما الحد الأدنى للإيداع؟</summary><p>الحد الأدنى لبدء التداول الفعلي هو 500 دولار، بينما حساب 100 دولار مخصص للمشاهدة فقط.</p></details>
+      <details><summary>هل أستطيع السحب في أي وقت؟</summary><p>نعم، التحكم عندك في السحب والإيداع في أي وقت.</p></details>
+      <details><summary>ما نسبة العوائد المتوقعة شهريًا؟</summary><p>نعمل على تحقيق عوائد مستهدفة بين 30% و40% شهريًا مع مخاطر لا تتجاوز 10%.</p></details>
+      <details><summary>هل أحتاج للمتابعة اليومية؟</summary><p>لا تحتاج للمتابعة اليومية — عش حياتك وركّز في عملك، بينما ندير الحساب نيابة عنك.</p></details>
+      <details><summary>كيف أبدأ؟</summary><p>يمكنك التواصل.</p></details>
+      <details><summary>هل يمكنني تجربة الخدمة قبل الإيداع الكبير؟</summary><p>نعم، يمكنك متابعة أداء حساب المشاهدة للتعرف على النتائج قبل الاستثمار.</p></details>
+      <details><summary>هل هناك عمولات أو رسوم خفية؟</summary><p>لم يتم التحديد بعد (مجاني الفترة الحالية).</p></details>
+      <details><summary>كيف تتم إدارة المخاطر؟</summary><p>نستخدم نظامًا دقيقًا لتحديد حجم الصفقات وإيقاف الخسائر ومتابعة الاتجاهات مع التعديل المستمر.</p></details>
+      <details><summary>لماذا تكون معنا؟</summary><p>لا تحتاج للمتابعة اليومية المرهقة — عش حياتك وركّز في عملك، ودع الحساب يعمل.</p></details>
     </section>
 
     <footer>© 2025 — <span class="brand">TREND KING</span> • إدارة مخاطر منضبطة • عوائد مستهدفة 30%–40%</footer>
   </div>
 
   <script>
-    // Popup logic with accessibility
+    // Popup logic
     const popup = document.getElementById('popup');
     const toggleBtn = document.querySelector('.btn[aria-controls="popup"]');
 
-    function openPopup(){
-      popup.style.display = 'block';
-      popup.setAttribute('aria-hidden','false');
-      toggleBtn?.setAttribute('aria-expanded','true');
-      popup.querySelector('a')?.focus();
-    }
-    function closePopup(){
-      popup.style.display = 'none';
-      popup.setAttribute('aria-hidden','true');
-      toggleBtn?.setAttribute('aria-expanded','false');
-      toggleBtn?.focus();
-    }
-    function togglePopup(e){
-      e?.stopPropagation();
-      const isOpen = popup.style.display === 'block';
-      isOpen ? closePopup() : openPopup();
-    }
-    // click outside
-    document.addEventListener('click', (e)=>{
-      if (popup.style.display === 'block' && !popup.contains(e.target) && !e.target.closest('.btn')) {
-        closePopup();
-      }
-    });
-    // ESC key
-    document.addEventListener('keydown', (e)=>{ if (e.key === 'Escape' && popup.style.display === 'block') closePopup(); });
+    function openPopup(){popup.style.display='block';popup.setAttribute('aria-hidden','false');toggleBtn?.setAttribute('aria-expanded','true');popup.querySelector('a')?.focus();}
+    function closePopup(){popup.style.display='none';popup.setAttribute('aria-hidden','true');toggleBtn?.setAttribute('aria-expanded','false');toggleBtn?.focus();}
+    function togglePopup(e){e?.stopPropagation();const isOpen=popup.style.display==='block';isOpen?closePopup():openPopup();}
+    document.addEventListener('click',(e)=>{if(popup.style.display==='block'&&!popup.contains(e.target)&&!e.target.closest('.btn')){closePopup();}});
+    document.addEventListener('keydown',(e)=>{if(e.key==='Escape'&&popup.style.display==='block')closePopup();});
 
-    // Calculator
-    const PCT_MONTHLY = 36.67, TRADING_DAYS = 21, PCT_DAILY = PCT_MONTHLY / TRADING_DAYS;
-    const badge = document.getElementById('dailyPctBadge');
-    const dailyPctText = document.getElementById('dailyPctText');
-    function setDailyPctText(){
-      const pct = new Intl.NumberFormat('en-US',{minimumFractionDigits:3,maximumFractionDigits:3}).format(PCT_DAILY);
-      if(badge) badge.textContent = `النسبة اليومية ≈ ${pct}%`;
-      if(dailyPctText) dailyPctText.textContent = `${pct}%`;
-    }
-    setDailyPctText();
-
-    const invInput = document.getElementById('invUSD');
-    const msg = document.getElementById('calcMsg');
-    const fmtMoney = new Intl.NumberFormat('en-US',{minimumFractionDigits:2,maximumFractionDigits:2});
-
-    function calcAuto(){
-      const inv = parseFloat(invInput.value);
-      if (isNaN(inv)){ msg.style.color='tomato'; msg.innerHTML='⚠️ الرجاء إدخال قيمة الاستثمار.'; return; }
-      if (inv < 1500){ msg.style.color='tomato'; msg.innerHTML='🚫 الحد الأدنى للاستثمار هو 1500 دولار.'; return; }
-      const monthlyProfit = inv * (PCT_MONTHLY/100);
-      const dailyProfit   = monthlyProfit / TRADING_DAYS;
-      msg.style.color = '#FFD700';
-      msg.innerHTML = `🏅 العائد اليومي: <span style="color:#7CFC00">${fmtMoney.format(dailyProfit)}</span> دولار<br>
-                       📅 العائد الشهري التقريبي: <span style="color:#7CFC00">${fmtMoney.format(monthlyProfit)}</span> دولار`;
-    }
-    invInput.addEventListener('input', () => {
-      const v = parseFloat(invInput.value);
-      if (!isNaN(v) && v >= 1500) calcAuto(); else msg.textContent='';
-    });
-  </script>
-</body>
-</html>
+   
